Parsing/Arguments/Grammar/Arguments.g4
grammar Arguments;

DASH: '-';
SPACE: ' ';

CHAR: [a-zA-Z];
NUMBER: [0-9]+;
path: (CHAR | '.' | '/' | SPACE)+;

identifier: CHAR (CHAR | NUMBER)*;
value: path | NUMBER | identifier;
space: SPACE+;

arg: DASH identifier (space value)?;
args: (arg space)*;
